--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,10 +8,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
-        .profile {
-            text-align: center;
-        }
         .profile img {
             display: block;
             margin: 0 auto;
@@ -18,12 +17,15 @@
             height: 150px; /* Adjust the size as needed */
             border-radius: 50%;
         }
+
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="profile-section">
-            <div class="profile">
+    <div class="profileBox">
+        <button class="toggelButton" onclick="toggleButton()"><i class="fa-solid fa-bars"></i></button>
+        <div class="profile-section" id="profile-section">
+            <div class="profile" id="profile">
                 <img src="profile.jpg" alt="Profile Picture">
                 <h1>Avinash Kumar Maurya</h1>
                 <p>Associate • Delivery-Application Services-SSA</p>
@@ -34,6 +36,8 @@
                 <a href="#" class="btn">Download CV</a>
             </div>
         </div>
+    </div>
+        
         <div class="content-section">
             <nav class="emoji-nav">
                 <ul>
@@ -44,6 +48,7 @@
                     <li><a href="#contact" data-tooltip="Contact">✉️</a></li>
                 </ul>
             </nav>
+            <div class="information">
             <section id="home">
                 <h2>Welcome to My Portfolio</h2>
                 <p>I'm Avinash, an Associate at Sify Digital Services. My meticulous attention to detail makes me a valuable asset. I excel at verifying documents, resolving customer concerns with DSC tokens, and maintaining data integrity through monthly audits.</p>
@@ -89,6 +94,7 @@
                 <p>Phone: +91 9027862126</p>
                 <p>LinkedIn: <a href="https://in.linkedin.com/in/avinashmaurya133">in.linkedin.com/in/avinashmaurya133</a></p>
             </section>
+        </div>
         </div>
     </div>
     <script src="script.js"></script>
