--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                     <a href="https://linkedin.com/in/avinashmaurya133" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="mailto:avinash2016maurya@gmail.com"><i class="fas fa-envelope"></i></a>
                 </div>
-                <a href="#" class="btn">Download CV</a>
+                <a href="#" onclick="window.open('https://drive.google.com/uc?export=download&id=1Iwi8NkysRfuTAGdTTtLMZa3Ki_bkvBed', '_blank');" class="btn">Download CV</a>
+
             </div>
         </div>
     </div>
