--- a/index.html
+++ b/index.html
@@ -74,16 +74,18 @@
                 </ul>
             </section>
             <section id="portfolio">
-                <h2>Portfolio</h2>
-                <div class="portfolio-item">
-                    <img src="project1.jpg" alt="Project 1">
-                    <p>Project 1 Description</p>
-                </div>
-                <div class="portfolio-item">
-                    <img src="project2.jpg" alt="Project 2">
-                    <p>Project 2 Description</p>
-                </div>
-            </section>
+    <h2>Portfolio</h2>
+    <div class="portfolio-item">
+        <img src="project1.jpg" alt="Project 1">
+        <p>Project 1 Description</p>
+    </div>
+    <div class="portfolio-item">
+        <a href="https://avinash101999.github.io/Clock/" target="_blank">
+            <img src="clock_project_preview.jpg" alt="Clock Project">
+        </a>
+        <p>Clock Project: A simple and elegant clock application that displays the current time. Click the image to view the project.</p>
+    </div>
+</section>
             <section id="testimonials">
                 <h2>Testimonials</h2>
                 <p>"Avinash is a dedicated professional with a keen eye for detail. His work ethic is exemplary." - Colleague</p>
