--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
             <section id="portfolio">
     <h2>Portfolio</h2>
     <div class="portfolio-item">
-        <img src="project1.jpg" alt="Project 1">
-        <p>Project 1 Description</p>
+        <a href="https://avinash101999.github.io/Quiz/" target="_blank">
+            <img src="quiz.jpg" alt="Quiz Project">
+        </a>
+        <p>Quiz Project: A simple Quiz.</p>
     </div>
     <div class="portfolio-item">
         <a href="https://avinash101999.github.io/Clock/" target="_blank">
