--- a/index.html
+++ b/index.html
@@ -76,16 +76,67 @@
             <section id="portfolio">
     <h2>Portfolio</h2>
     <div class="portfolio-item">
-        <a href="https://avinash101999.github.io/Quiz/" target="_blank">
-            <img src="quiz.jpg" alt="Quiz Project">
+        <a href="https://your-live-preview-link1.com" target="_blank">
+            <iframe src="https://your-live-preview-link1.com" frameborder="0"></iframe>
+            <h3>Project 1</h3>
+            <p>Details about Project 1.</p>
         </a>
-        <p>Quiz Project: A simple Quiz.</p>
     </div>
     <div class="portfolio-item">
-        <a href="https://avinash101999.github.io/Clock/" target="_blank">
-            <img src="clock_project_preview.jpg" alt="Clock Project">
+        <a href="https://your-live-preview-link2.com" target="_blank">
+            <iframe src="https://your-live-preview-link2.com" frameborder="0"></iframe>
+            <h3>Project 2</h3>
+            <p>Details about Project 2.</p>
         </a>
-        <p>Clock Project: A simple and elegant clock application that displays the current time. Click the image to view the project.</p>
+    </div>
+    <div class="portfolio-item">
+        <a href="https://your-live-preview-link3.com" target="_blank">
+            <iframe src="https://your-live-preview-link3.com" frameborder="0"></iframe>
+            <h3>Project 3</h3>
+            <p>Details about Project 3.</p>
+        </a>
+    </div>
+    <div class="portfolio-item">
+        <a href="https://your-live-preview-link4.com" target="_blank">
+            <iframe src="https://your-live-preview-link4.com" frameborder="0"></iframe>
+            <h3>Project 4</h3>
+            <p>Details about Project 4.</p>
+        </a>
+    </div>
+    <div class="portfolio-item">
+        <a href="https://your-live-preview-link5.com" target="_blank">
+            <iframe src="https://your-live-preview-link5.com" frameborder="0"></iframe>
+            <h3>Project 5</h3>
+            <p>Details about Project 5.</p>
+        </a>
+    </div>
+    <div class="portfolio-item">
+        <a href="https://your-live-preview-link6.com" target="_blank">
+            <iframe src="https://your-live-preview-link6.com" frameborder="0"></iframe>
+            <h3>Project 6</h3>
+            <p>Details about Project 6.</p>
+        </a>
+    </div>
+    <div class="portfolio-item">
+        <a href="https://your-live-preview-link7.com" target="_blank">
+            <iframe src="https://your-live-preview-link7.com" frameborder="0"></iframe>
+            <h3>Project 7</h3>
+            <p>Details about Project 7.</p>
+        </a>
+    </div>
+    <div class="portfolio-item">
+        <a href="https://your-live-preview-link8.com" target="_blank">
+            <iframe src="https://your-live-preview-link8.com" frameborder="0"></iframe>
+            <h3>Project 8</h3>
+            <p>Details about Project 8.</p>
+        </a>
+    </div>
+    <div class="portfolio-item">
+        <a href="https://your-live-preview-link9.com" target="_blank">
+            <iframe src="https://your-live-preview-link9.com" frameborder="0"></iframe>
+            <h3>Project 9</h3>
+            <p>Details about Project 9.</p>
+        </a>
     </div>
 </section>
             <section id="testimonials">
