--- a/index.html
+++ b/index.html
@@ -90,29 +90,29 @@
         </a>
     </div>
     <div class="portfolio-item">
-        <a href="https://your-live-preview-link3.com" target="_blank">
-            <iframe src="https://your-live-preview-link3.com" frameborder="0"></iframe>
+        <a href="https://avinash101999.github.io/Quiz/" target="_blank">
+            <iframe src="https://avinash101999.github.io/Quiz/" frameborder="0"></iframe>
             <h3>Project 3</h3>
             <p>Details about Project 3.</p>
         </a>
     </div>
     <div class="portfolio-item">
-        <a href="https://your-live-preview-link4.com" target="_blank">
-            <iframe src="https://your-live-preview-link4.com" frameborder="0"></iframe>
+        <a href="https://avinash101999.github.io/Clock/" target="_blank">
+            <iframe src="https://avinash101999.github.io/Clock/" frameborder="0"></iframe>
             <h3>Project 4</h3>
             <p>Details about Project 4.</p>
         </a>
     </div>
     <div class="portfolio-item">
-        <a href="https://your-live-preview-link5.com" target="_blank">
-            <iframe src="https://your-live-preview-link5.com" frameborder="0"></iframe>
+        <a href="https://avinash101999.github.io/Helperhero/#" target="_blank">
+            <iframe src="https://avinash101999.github.io/Helperhero/#" frameborder="0"></iframe>
             <h3>Project 5</h3>
             <p>Details about Project 5.</p>
         </a>
     </div>
     <div class="portfolio-item">
-        <a href="https://your-live-preview-link6.com" target="_blank">
-            <iframe src="https://your-live-preview-link6.com" frameborder="0"></iframe>
+        <a href="https://avinash101999.github.io/dscprice/" target="_blank">
+            <iframe src="https://avinash101999.github.io/dscprice/" frameborder="0"></iframe>
             <h3>Project 6</h3>
             <p>Details about Project 6.</p>
         </a>
