--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                     src="https://avinash101999.github.io/Quiz/"
                     frameborder="0"
                   ></iframe>
-                  <h3>Project 3</h3>
-                  <p>Details about Project 3.</p>
+                  <h3>Quiz Hub</h3>
+                  <p>Quiz Hub is an interactive platform offering a variety of quizzes to test and expand your knowledge across different topics, providing a fun and educational experience for all..</p>
                 </a>
               </div>
               <div class="portfolio-item">
@@ -141,8 +141,8 @@
                     src="https://avinash101999.github.io/Clock/"
                     frameborder="0"
                   ></iframe>
-                  <h3>Project 4</h3>
-                  <p>Details about Project 4.</p>
+                  <h3>Digital Clock</h3>
+                  <p>Digital Clock is a simple, real-time clock that displays the current time in a clean and easy-to-read format. It offers an intuitive design, perfect for keeping track of time while you work or relax..</p>
                 </a>
               </div>
               <div class="portfolio-item">
@@ -154,8 +154,8 @@
                     src="https://avinash101999.github.io/Helperhero/#"
                     frameborder="0"
                   ></iframe>
-                  <h3>Project 5</h3>
-                  <p>Details about Project 5.</p>
+                  <h3>HelperHero</h3>
+                  <p>HelperHero is a productivity tool designed to assist users with a variety of tasks, offering helpful resources and features to streamline your daily activities. Whether it's managing your to-dos or boosting efficiency, HelperHero is here to make your life easier.</p>
                 </a>
               </div>
               <div class="portfolio-item">
@@ -167,8 +167,9 @@
                     src="https://avinash101999.github.io/dscprice/"
                     frameborder="0"
                   ></iframe>
-                  <h3>Project 6</h3>
-                  <p>Details about Project 6.</p>
+                  <h3>DSC Price</h3>
+                  <p>DSC Price Tracker is a simple tool that helps users monitor and compare prices of products. With real-time updates, it allows you to make informed purchasing decisions by tracking price fluctuations and finding the best deals.
+.</p>
                 </a>
               </div>
 
