--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     frameborder="0"
                   ></iframe>
                   <h3>Quiz Hub</h3>
-                  <p>Quiz Hub is an interactive platform offering a variety of quizzes to test and expand your knowledge across different topics, providing a fun and educational experience for all..</p>
+                  <p>A fun platform to test your knowledge with a variety of quizzes across different topics.</p>
                 </a>
               </div>
               <div class="portfolio-item">
@@ -142,7 +142,7 @@
                     frameborder="0"
                   ></iframe>
                   <h3>Digital Clock</h3>
-                  <p>Digital Clock is a simple, real-time clock that displays the current time in a clean and easy-to-read format. It offers an intuitive design, perfect for keeping track of time while you work or relax..</p>
+                  <p>A clean and simple digital clock displaying real-time time.</p>
                 </a>
               </div>
               <div class="portfolio-item">
@@ -155,7 +155,7 @@
                     frameborder="0"
                   ></iframe>
                   <h3>HelperHero</h3>
-                  <p>HelperHero is a productivity tool designed to assist users with a variety of tasks, offering helpful resources and features to streamline your daily activities. Whether it's managing your to-dos or boosting efficiency, HelperHero is here to make your life easier.</p>
+                  <p>A productivity tool to help streamline your tasks and boost efficiency.</p>
                 </a>
               </div>
               <div class="portfolio-item">
@@ -168,8 +168,7 @@
                     frameborder="0"
                   ></iframe>
                   <h3>DSC Price</h3>
-                  <p>DSC Price Tracker is a simple tool that helps users monitor and compare prices of products. With real-time updates, it allows you to make informed purchasing decisions by tracking price fluctuations and finding the best deals.
-.</p>
+                  <p>Track and compare product prices to find the best deals.</p>
                 </a>
               </div>
 
